# bevy_observed_utility

./: Cargo.toml  README.md
benches/: score.rs
src/: ecs.rs  event.rs  scoring.rs
src/picking/: first_to_score.rs  highest.rs
src/scoring/: all_or_nothing.rs  evaluator.rs  fixed.rs  measured.rs  product.rs  sum.rs  winning.rs
