[package]
name = "bevy_observed_utility"
version = "0.3.0"
edition = "2024"
authors = ["Christian Hughes"]
description = "Ergonomic and Correct Utility AI for Bevy Engine"
categories = ["game-development"]
keywords = ["bevy", "utility-ai", "ai", "ecs", "observers"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = []

[dependencies]
bevy = { version = "0.16", default-features = false, features=["bevy_log"] }
rand = { version = "0.9", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
rand = { version = "0.9", features = ["std_rng"]}

[[bench]]
name = "score"
harness = false